tests/pass/sema_strict_ok.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
import std/debug::assert

fn main() -> i32 {
    // 1. Valid Arithmetic
    auto i = 1 + 2
    // auto f = 1.0 + 2.0

    // 2. Valid Comparison
    auto b = 1 == 2
    auto b2 = 1 < 2

    // 3. Valid If Condition
    if true {}
    
    assert(i == 3, "i mismatch")
    assert(b == false, "b logic mismatch (1==2)")
    assert(b2 == true, "b2 logic mismatch (1<2)")
    return 0
}
