tests/fail/test_err.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
import std/io::printf
// EXPECT: symbol 'printf' not found in module 'std/io'

shape Point (
    x: i32,
    y: i32
)

fn takes_i32(a: i32) {
    return
}

fn modify(arg: i32) {
    // arg# = 20 // Error: arg is not mutable
    return
}

fn main() {
    // 1. Type mismatch in assignment (Implicit conversion disabled)
    auto a: i64 = 10
    auto b: i32 = a // Error: i64 to i32

    // 2. Type mismatch in function call
    takes_i32(a) // Error: expected i32, got i64

    // 3. Mutability violation (Assigning to immutable)
    auto c = 5
    c# = 10 // Error: c is immutable

    // 4. Mutation without token
    auto d# = 10
    d = 20 // Error: Missing # at usage site (If we enforce this at usage site)

    // 5. Binary operation type mismatch
    // (We will use explicit types to trigger it until parser supports : annotation in expressions)
    auto e1: i32 = 10
    auto e2: i64 = 20
    auto e3 = e1 + e2 // Error: i32 + i64

    // 6. Struct initialization type mismatch
    auto p = Point(x = a, y = 20) // Error: x expects i32, a is i64

    return
}
